--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  saved date: Sat Aug 20 2022 18:40:55 GMT+0530 (India Standard Time)
 --><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="cache-control" content="private">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta http-equiv="content-script-type" content="text/javascript">
 <meta name="viewport" content="viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
