--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
  url: https://www.justinmind.com/usernote/tests/17386057/17386059/31533348/index.html#/screens/f59703af-d6c7-442e-bf74-ed2f73529667 
  saved date: Sat Aug 20 2022 18:40:55 GMT+0530 (India Standard Time)
 --><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="cache-control" content="private">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+  
 <meta http-equiv="content-script-type" content="text/javascript">
 <meta name="viewport" content="viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -114,7 +114,7 @@
  </div>
  </div>
  </div>
- <img src="au.jpg" height="80" width="80" style="left:51.5%;position:absolute;margin:0px 0px 0px -76.5px">
+ <a href="https://rohitkanyalportfolio.netlify.app/"><img src="au.jpg" height="80" width="80" style="left:51.5%;position:absolute;margin:0px 0px 0px -76.5px"></a>
  <div id="s-Rohit_kanyal_2" class="pie richtext firer ie-background commentable pin hpin-center" datasizewidth="153px" datasizeheight="24px" style="left:50%;top:85px;position:absolute;margin:0px 0px 0px -76.5px">
  
 
