--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  Page saved with SingleFile 
  url: https://www.justinmind.com/usernote/tests/17386057/17386059/31533348/index.html#/screens/f59703af-d6c7-442e-bf74-ed2f73529667 
  saved date: Sat Aug 20 2022 18:40:55 GMT+0530 (India Standard Time)
---><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+--><head>
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
  <meta name="viewport" content="width=device-width, initial-scale=1">
   
