--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ As with most other social skills, to master listening, practice is required. Luc
                     </ul>
                     --> 
 
-                     <br><a class="subheading mb-5" href="mailto:name@email.com">Next</a>
+                     <br><a class="subheading mb-5" href="https://rohitkanyalportfolio-time-managment.netlify.app/">Next</a>
                 </div>
 
             </section>
